<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LibraryFragment">

    <TextView
        android:id="@+id/fragment_library_txt_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recent"
        android:textColor="@color/youtubeGreyDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_library_video_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_library_txt_recent" />

    <LinearLayout
        android:id="@+id/fragment_library_hr_01"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hr_height"
        android:layout_marginTop="@dimen/hr_margin"
        android:layout_marginBottom="@dimen/hr_margin"
        android:background="@color/youtubeGreyLight"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_library_video_recycler_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_library_info_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_library_hr_01">

        <ImageView
            android:id="@+id/fragment_library_img_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fragment_library_history_icon"
            android:src="@drawable/ic_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragment_library_img_my_videos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/fragment_library_my_videos_icon"
            android:src="@drawable/ic_video_library"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_library_img_history" />

        <ImageView
            android:id="@+id/fragment_library_img_purchases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/fragment_library_purchases_icon"
            android:src="@drawable/ic_monetization"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_library_img_my_videos" />

        <ImageView
            android:id="@+id/fragment_library_img_watch_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/fragment_library_watch_later_icon"
            android:src="@drawable/ic_watch_later"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_library_img_purchases" />

        <TextView
            android:id="@+id/fragment_library_txt_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_library_info_block_text_margin"
            android:layout_marginLeft="@dimen/fragment_library_info_block_text_margin"
            android:text="@string/history"
            android:textColor="@color/youtubeGreyDark"
            android:textSize="@dimen/fragment_library_info_block_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_library_img_history"
            app:layout_constraintStart_toEndOf="@+id/fragment_library_img_history"
            app:layout_constraintTop_toTopOf="@+id/fragment_library_img_history" />

        <TextView
            android:id="@+id/fragment_library_txt_my_videos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_library_info_block_text_margin"
            android:layout_marginLeft="@dimen/fragment_library_info_block_text_margin"
            android:text="@string/my_videos"
            android:textColor="@color/youtubeGreyDark"
            android:textSize="@dimen/fragment_library_info_block_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_library_img_my_videos"
            app:layout_constraintStart_toEndOf="@+id/fragment_library_img_my_videos"
            app:layout_constraintTop_toTopOf="@+id/fragment_library_img_my_videos" />

        <TextView
            android:id="@+id/fragment_library_txt_purchases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_library_info_block_text_margin"
            android:layout_marginLeft="@dimen/fragment_library_info_block_text_margin"
            android:text="@string/purchases"
            android:textColor="@color/youtubeGreyDark"
            android:textSize="@dimen/fragment_library_info_block_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_library_img_purchases"
            app:layout_constraintStart_toEndOf="@+id/fragment_library_img_purchases"
            app:layout_constraintTop_toTopOf="@+id/fragment_library_img_purchases" />

        <TextView
            android:id="@+id/fragment_library_txt_watch_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fragment_library_info_block_text_margin"
            android:layout_marginLeft="@dimen/fragment_library_info_block_text_margin"
            android:text="@string/watch_later"
            android:textColor="@color/youtubeGreyDark"
            android:textSize="@dimen/fragment_library_info_block_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_library_img_watch_later"
            app:layout_constraintStart_toEndOf="@+id/fragment_library_img_watch_later"
            app:layout_constraintTop_toTopOf="@+id/fragment_library_img_watch_later" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/fragment_library_hr_02"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hr_height"
        android:layout_marginTop="@dimen/hr_margin"
        android:layout_marginBottom="@dimen/hr_margin"
        android:background="@color/youtubeGreyLight"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_library_info_block" />

    <TextView
        android:id="@+id/fragment_library_txt_playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/playlists_recently_added"
        android:textColor="@color/youtubeGreyDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_library_hr_02" />

</androidx.constraintlayout.widget.ConstraintLayout>