<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_notification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">


    <ImageView
        android:id="@+id/item_notification_img_channel_logo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/item_notification_channel_logo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/item_notification_img_video_preview"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/item_notification_video_preview"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_notification_img_more_actions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageView
        android:id="@+id/item_notification_img_more_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/item_notification_more_actions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/item_notification_txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/youtubeBlack"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/item_notification_img_video_preview"
        app:layout_constraintStart_toEndOf="@+id/item_notification_img_channel_logo"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Channel uploaded: Title of the video" />

    <TextView
        android:id="@+id/item_notification_txt_uploaded_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/item_notification_img_video_preview"
        app:layout_constraintStart_toEndOf="@+id/item_notification_img_channel_logo"
        app:layout_constraintTop_toBottomOf="@+id/item_notification_txt_title"
        tools:ignore="SmallSp"
        tools:text="1 day ago" />
</androidx.constraintlayout.widget.ConstraintLayout>